# aletheion-core

./: CHANGELOG.md  CITATION.cff  COPYRIGHT  GIT_HISTORY_EVIDENCE.txt  LICENSE-COMMERCIAL.md  MANIFEST.in  NOTICE  PRIOR_ART.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
aletheion-core/blob/main/: Aletheion_Preprint___v4_0.pdfZone.Identifier
aletheion-core/src/: __init__.py  epistemic_gate.py  q_metric.py
aletheion-core/tests/: test_basic.py
docs/: API.md  CONTRIBUTING.md  THEORY.md
examples/: arc_example.py  simple_demo.py
src/: __init__.py  epistemic_gate.py  q_metric.py  varo.py
tests/: test_basic.py  test_epistemic_gate.py  test_q_metric.py  test_varo.py
